--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: bisque;
+    background-color:lavenderblush
 }
 
 hr {
@@ -8,4 +8,12 @@ hr {
     border-color: grey;
     border-width: 5px;
     width: 5%
+}
+
+h1 {
+    color: aquamarine;
+}
+
+h2{
+    color: aquamarine;
 }
